<resources>
    <string name="app_name">LeroyMerlin</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycle2_name">Недавно просмотренные</string>
    <string name="search">Поиск</string>
    <string name="navigation_main">Главная</string>
    <string name="navigation_my_list">Мой список</string>
    <string name="navigation_shops">Магазины</string>
    <string name="navigation_profile">Профиль</string>
    <string name="navigation_basket">Корзина</string>
    <string name="group_text_view">Предложение ограничено</string>
    <string name="search_text_View">Поиск товаров</string>
    <string name="search_edit_text">Поиск</string>
</resources>